--- a/_view-medium.scss
+++ b/_view-medium.scss
@@ -5,7 +5,7 @@
     grid-template-columns: auto;
     align-items: start;
     justify-content: space-between;
-    column-gap: 1.5rem;
+    column-gap: var(--column-gap);
     @include constrained-column-width();
   }
 
@@ -35,6 +35,7 @@
   }
 
   .sender {
+    padding-left: $side-pad;
     text-align: left;
   }
 
@@ -51,7 +52,7 @@
     overflow: visible;
 
     &::before {
-      @include columnar-mark($mark-symbol);
+      @include columnar-mark($mark-symbol, -1.2ch);
     }
   }
 
